--- a/Helen.Cinema.html
+++ b/Helen.Cinema.html
@@ -227,12 +227,7 @@
         pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.4.120/pdf.worker.min.js';
 
         const state = {
-            playlist: [],
-            currentTrack: 0,
-            viewMode: 0, 
-            is3D: false, 
-            isVoid: false,
-            curve: 90,
+            playlist: [], currentTrack: 0, viewMode: 0, is3D: false, isVoid: false, curve: 90,
             currentObjectURL: null,
             pdf: { doc: null, pageNum: 1, rendering: false, pending: null },
             audio: { ctx: null, source: null, panner: null }
@@ -240,56 +235,34 @@
 
         const DOM = {
             ui: {
-                layer: document.getElementById('ui-layer'),
-                fileInput: document.getElementById('file-input'),
-                urlInput: document.getElementById('url-input'),
-                playlist: document.getElementById('playlist-ui'),
-                list: document.getElementById('playlist-list'),
-                btnStart: document.getElementById('btn-start'),
+                layer: document.getElementById('ui-layer'), fileInput: document.getElementById('file-input'),
+                urlInput: document.getElementById('url-input'), playlist: document.getElementById('playlist-ui'),
+                list: document.getElementById('playlist-list'), btnStart: document.getElementById('btn-start'),
                 dropOverlay: document.getElementById('drop-overlay')
             },
             media: {
-                video: document.getElementById('video-src'),
-                img: document.getElementById('img-src'),
-                pdfCanvas: document.getElementById('pdf-canvas'),
-                lightCanvas: document.getElementById('light-canvas')
+                video: document.getElementById('video-src'), img: document.getElementById('img-src'),
+                pdfCanvas: document.getElementById('pdf-canvas'), lightCanvas: document.getElementById('light-canvas')
             },
             vr: {
                 scene: document.querySelector('a-scene'),
                 screens: {
-                    // Standard
-                    cinema: document.getElementById('screen-cinema'),
-                    cyl: document.getElementById('screen-180'),
-                    sphere: document.getElementById('screen-360'),
-                    // 3D Left
-                    cinemaL: document.getElementById('screen-cinema-left'),
-                    cylL: document.getElementById('screen-180-left'),
-                    sphereL: document.getElementById('screen-360-left'),
-                    // 3D Right
-                    cinemaR: document.getElementById('screen-cinema-right'),
-                    cylR: document.getElementById('screen-180-right'),
-                    sphereR: document.getElementById('screen-360-right')
+                    cinema: document.getElementById('screen-cinema'), cyl: document.getElementById('screen-180'), sphere: document.getElementById('screen-360'),
+                    cinemaL: document.getElementById('screen-cinema-left'), cylL: document.getElementById('screen-180-left'), sphereL: document.getElementById('screen-360-left'),
+                    cinemaR: document.getElementById('screen-cinema-right'), cylR: document.getElementById('screen-180-right'), sphereR: document.getElementById('screen-360-right')
                 },
                 controls: {
-                    wrapper: document.getElementById('hub-wrapper'),
-                    videoGroup: document.getElementById('video-controls'),
-                    orb: document.getElementById('menu-orb'),
-                    playText: document.getElementById('txt-play'),
-                    timeText: document.getElementById('time-display'),
-                    progress: document.getElementById('progress-fill'),
-                    title: document.getElementById('txt-title'),
-                    seekBack: document.getElementById('txt-seek-back'),
-                    seekFwd: document.getElementById('txt-seek-fwd'),
-                    modeBtn: document.getElementById('btn-mode'),
-                    btn3d: document.getElementById('btn-3d'),
-                    txt3d: document.getElementById('txt-3d'),
+                    wrapper: document.getElementById('hub-wrapper'), videoGroup: document.getElementById('video-controls'),
+                    orb: document.getElementById('menu-orb'), playText: document.getElementById('txt-play'),
+                    timeText: document.getElementById('time-display'), progress: document.getElementById('progress-fill'),
+                    title: document.getElementById('txt-title'), seekBack: document.getElementById('txt-seek-back'),
+                    seekFwd: document.getElementById('txt-seek-fwd'), modeBtn: document.getElementById('btn-mode'),
+                    btn3d: document.getElementById('btn-3d'), txt3d: document.getElementById('txt-3d'),
                     speedText: document.getElementById('txt-speed')
                 },
                 env: {
-                    floor: document.getElementById('env-floor'),
-                    ambi: document.getElementById('ambi-light'),
-                    glow: document.getElementById('screen-glow'),
-                    rig: document.getElementById('rig')
+                    floor: document.getElementById('env-floor'), ambi: document.getElementById('ambi-light'),
+                    glow: document.getElementById('screen-glow'), rig: document.getElementById('rig')
                 }
             }
         };
@@ -300,26 +273,18 @@
                 const newItems = Array.from(files).map(f => {
                     let type = 'video';
                     const ext = f.name.split('.').pop().toLowerCase();
-                    if (f.type.startsWith('image/') || ['jpg','jpeg','png','gif','webp'].includes(ext)) {
-                        type = 'image';
-                    } else if (f.type === 'application/pdf' || ext === 'pdf') {
-                        type = 'pdf';
-                    }
+                    if (f.type.startsWith('image/') || ['jpg','jpeg','png','gif','webp'].includes(ext)) { type = 'image'; }
+                    else if (f.type === 'application/pdf' || ext === 'pdf') { type = 'pdf'; }
                     return { type: type, src: f, name: f.name };
                 });
-                state.playlist = state.playlist.concat(newItems);
-                updatePlaylistUI();
+                state.playlist = state.playlist.concat(newItems); updatePlaylistUI();
             }
         }
         DOM.ui.fileInput.addEventListener('change', (e) => handleFiles(e.target.files));
         
         document.body.addEventListener('dragover', (e) => { e.preventDefault(); DOM.ui.dropOverlay.style.display = 'flex'; });
         document.body.addEventListener('dragleave', (e) => { e.preventDefault(); DOM.ui.dropOverlay.style.display = 'none'; });
-        document.body.addEventListener('drop', (e) => {
-            e.preventDefault();
-            DOM.ui.dropOverlay.style.display = 'none';
-            handleFiles(e.dataTransfer.files);
-        });
+        document.body.addEventListener('drop', (e) => { e.preventDefault(); DOM.ui.dropOverlay.style.display = 'none'; handleFiles(e.dataTransfer.files); });
 
         document.getElementById('btn-url').addEventListener('click', () => {
             const url = DOM.ui.urlInput.value.trim();
@@ -334,28 +299,20 @@
         });
 
         function updatePlaylistUI() {
-            DOM.ui.playlist.style.display = 'block';
-            DOM.ui.btnStart.style.display = 'block';
-            DOM.ui.list.innerHTML = '';
+            DOM.ui.playlist.style.display = 'block'; DOM.ui.btnStart.style.display = 'block'; DOM.ui.list.innerHTML = '';
             state.playlist.forEach((item, index) => {
-                const div = document.createElement('div');
-                div.className = 'playlist-item';
+                const div = document.createElement('div'); div.className = 'playlist-item';
                 if(index === state.currentTrack && DOM.ui.layer.classList.contains('hidden')) div.classList.add('playlist-active');
                 div.innerText = `${index + 1}. [${item.type.toUpperCase()}] ${item.name}`;
                 div.onclick = () => { loadTrack(index); highlightActive(); };
                 DOM.ui.list.appendChild(div);
             });
         }
-        function highlightActive() {
-             Array.from(DOM.ui.list.children).forEach((child, i) => {
-                 child.classList.toggle('playlist-active', i === state.currentTrack);
-             });
-        }
+        function highlightActive() { Array.from(DOM.ui.list.children).forEach((child, i) => { child.classList.toggle('playlist-active', i === state.currentTrack); }); }
 
         DOM.ui.btnStart.addEventListener('click', () => {
             if(state.playlist.length > 0) {
-                DOM.ui.layer.classList.add('hidden');
-                loadTrack(state.currentTrack);
+                DOM.ui.layer.classList.add('hidden'); loadTrack(state.currentTrack);
                 if(DOM.vr.scene.enterVR) DOM.vr.scene.enterVR();
             }
         });
@@ -397,8 +354,7 @@
 
                     const loadingTask = pdfjsLib.getDocument(src);
                     loadingTask.promise.then(pdf => {
-                        state.pdf.doc = pdf;
-                        state.pdf.pageNum = 1;
+                        state.pdf.doc = pdf; state.pdf.pageNum = 1;
                         DOM.vr.controls.playText.setAttribute('value', 'PDF VIEW');
                         renderPDFPage(state.pdf.pageNum);
                     }).catch(error => { DOM.vr.controls.playText.setAttribute('value', 'ERROR'); });
@@ -407,86 +363,54 @@
                     DOM.media.video.pause();
                     DOM.vr.controls.videoGroup.setAttribute('visible', false);
                     updateTexture('#img-src'); 
-                    DOM.media.img.onload = function() { 
-                        refreshTextureMesh(); 
-                        drawAmbilight(DOM.media.img); 
-                        if(state.is3D) fix3DTextures(); // Apply 3D split if active
-                    };
+                    DOM.media.img.onload = function() { refreshTextureMesh(); drawAmbilight(DOM.media.img); };
                     DOM.media.img.src = src;
 
                 } else {
                     DOM.media.video.src = src;
                     updateTexture('#video-src');
                     initAudio();
-                    DOM.media.video.play().then(() => {
-                        DOM.vr.controls.playText.setAttribute('value', 'PAUSE');
-                        // CRITICAL: Ensure textures are split for 3D once playing
-                        setTimeout(fix3DTextures, 500);
-                    }).catch(e => DOM.vr.controls.playText.setAttribute('value', 'PLAY'));
+                    DOM.media.video.play().then(() => { DOM.vr.controls.playText.setAttribute('value', 'PAUSE'); })
+                    .catch(e => DOM.vr.controls.playText.setAttribute('value', 'PLAY'));
                     requestAnimationFrame(updateAmbilight);
                 }
             }
         }
 
-        /* TEXTURE & SCREEN HELPERS */
+        /* TEXTURE & SCREEN HELPERS (THE BUG FIX IS HERE) */
         function updateTexture(sourceId) {
-            const screens = [
-                DOM.vr.screens.cinema, DOM.vr.screens.cyl, DOM.vr.screens.sphere,
-                DOM.vr.screens.cinemaL, DOM.vr.screens.cylL, DOM.vr.screens.sphereL,
-                DOM.vr.screens.cinemaR, DOM.vr.screens.cylR, DOM.vr.screens.sphereR
-            ];
-            screens.forEach(s => {
-                if(s.tagName.toLowerCase() === 'a-curvedimage' || s.tagName.toLowerCase() === 'a-videosphere') s.setAttribute('src', sourceId);
-                else s.setAttribute('material', 'src', sourceId);
+            // 1. Standard Screens (Full Width)
+            [DOM.vr.screens.cinema, DOM.vr.screens.cyl, DOM.vr.screens.sphere].forEach(s => {
+                s.setAttribute('src', sourceId);
+                s.setAttribute('material', 'repeat', '1 1');
+                s.setAttribute('material', 'offset', '0 0');
+            });
+
+            // 2. Left Screens (Left Half 0.0 - 0.5)
+            [DOM.vr.screens.cinemaL, DOM.vr.screens.cylL, DOM.vr.screens.sphereL].forEach(s => {
+                s.setAttribute('src', sourceId);
+                s.setAttribute('material', 'repeat', '0.5 1');
+                s.setAttribute('material', 'offset', '0 0');
+            });
+
+            // 3. Right Screens (Right Half 0.5 - 1.0)
+            [DOM.vr.screens.cinemaR, DOM.vr.screens.cylR, DOM.vr.screens.sphereR].forEach(s => {
+                s.setAttribute('src', sourceId);
+                s.setAttribute('material', 'repeat', '0.5 1');
+                s.setAttribute('material', 'offset', '0.5 0');
             });
         }
 
         function refreshTextureMesh() {
-            const screens = [
-                DOM.vr.screens.cinema, DOM.vr.screens.cyl, DOM.vr.screens.sphere,
-                DOM.vr.screens.cinemaL, DOM.vr.screens.cylL, DOM.vr.screens.sphereL,
-                DOM.vr.screens.cinemaR, DOM.vr.screens.cylR, DOM.vr.screens.sphereR
-            ];
-            screens.forEach(el => {
+            Object.values(DOM.vr.screens).forEach(el => {
                 const mesh = el.getObject3D('mesh');
                 if (mesh && mesh.material.map) mesh.material.map.needsUpdate = true;
-            });
-        }
-
-        /* --- THE MAGIC FIX: FORCE TEXTURE CLONING FOR 3D --- */
-        function fix3DTextures() {
-            // We must manually clone the texture for the Right Eye screens so they can have independent Offsets.
-            const rightScreens = [DOM.vr.screens.cinemaR, DOM.vr.screens.cylR, DOM.vr.screens.sphereR];
-            rightScreens.forEach(el => {
-                const mesh = el.getObject3D('mesh');
-                if(mesh && mesh.material && mesh.material.map) {
-                    const tex = mesh.material.map.clone(); // Clone texture
-                    tex.needsUpdate = true;
-                    mesh.material.map = tex; // Assign new unique texture
-                    
-                    // Force Right Eye Offset (Right half of video)
-                    mesh.material.map.repeat.set(0.5, 1);
-                    mesh.material.map.offset.set(0.5, 0);
-                }
-            });
-
-            // Ensure Left Eye is standard
-            const leftScreens = [DOM.vr.screens.cinemaL, DOM.vr.screens.cylL, DOM.vr.screens.sphereL];
-            leftScreens.forEach(el => {
-                const mesh = el.getObject3D('mesh');
-                if(mesh && mesh.material && mesh.material.map) {
-                    mesh.material.map.repeat.set(0.5, 1);
-                    mesh.material.map.offset.set(0, 0);
-                }
             });
         }
 
         function updateVisibility() {
             Object.values(DOM.vr.screens).forEach(s => s.setAttribute('visible', false));
             DOM.vr.env.floor.setAttribute('visible', !state.isVoid);
-
-            // Trigger Texture Fix if entering 3D
-            if(state.is3D) fix3DTextures();
 
             if (state.viewMode === 0) { // Cinema
                 if (state.is3D) {
@@ -525,23 +449,14 @@
         }
 
         function force2DMode() {
-            state.viewMode = 0;
-            state.is3D = false;
-            updateVisibility();
+            state.viewMode = 0; state.is3D = false; updateVisibility();
         }
 
         /* BUTTON ACTIONS */
-        DOM.vr.controls.modeBtn.addEventListener('click', function() {
-            state.viewMode = (state.viewMode + 1) % 3; 
-            updateVisibility();
-            flash(this);
-        });
-
+        DOM.vr.controls.modeBtn.addEventListener('click', function() { state.viewMode = (state.viewMode + 1) % 3; updateVisibility(); flash(this); });
         DOM.vr.controls.btn3d.addEventListener('click', function() {
             if(state.playlist[state.currentTrack] && state.playlist[state.currentTrack].type === 'pdf') return;
-            state.is3D = !state.is3D;
-            updateVisibility();
-            flash(this);
+            state.is3D = !state.is3D; updateVisibility(); flash(this);
         });
 
         document.getElementById('btn-close').addEventListener('click', function() { toggleMenu(false); flash(this); });
@@ -635,7 +550,6 @@
         document.getElementById('curve-more').addEventListener('click', function() { if(state.curve < 160) { state.curve += 10; updateScreenCurve(); flash(this); }});
         document.getElementById('curve-less').addEventListener('click', function() { if(state.curve > 30) { state.curve -= 10; updateScreenCurve(); flash(this); }});
 
-        /* LOOP */
         setInterval(() => {
             const currentItem = state.playlist[state.currentTrack]; const v = DOM.media.video;
             if(currentItem && currentItem.type === 'video' && v.duration) {
