--- a/Helen.Cinema.html
+++ b/Helen.Cinema.html
@@ -213,9 +213,23 @@
             height="12" radius="14" theta-length="90" rotation="0 135 0" position="0 5 0" side="double" visible="false">
         </a-curvedimage>
 
-        <a-entity id="screen-180" geometry="primitive: cylinder; radius: 60; height: 100; thetaLength: 180; openEnded: true; segmentsRadial: 64" material="shader: flat; side: back; src: #video-src" rotation="0 -270 0" visible="false"></a-entity>
-        <a-entity id="screen-180-left" geometry="primitive: cylinder; radius: 60; height: 100; thetaLength: 180; openEnded: true; segmentsRadial: 64" material="shader: flat; side: back; src: #video-src" rotation="0 -270 0" visible="false"></a-entity>
-        <a-entity id="screen-180-right" geometry="primitive: cylinder; radius: 60; height: 100; thetaLength: 180; openEnded: true; segmentsRadial: 64" material="shader: flat; side: back; src: #video-src" rotation="0 -270 0" visible="false"></a-entity>
+      <a-entity id="screen-180" 
+    geometry="primitive: cylinder; radius: 60; height: 100; thetaLength: 180; openEnded: true; segmentsRadial: 64" 
+    material="shader: flat; side: back; src: #video-src; fog: false" 
+    rotation="0 -270 0" visible="false">
+</a-entity>
+
+<a-entity id="screen-180-left" 
+    geometry="primitive: cylinder; radius: 60; height: 100; thetaLength: 180; openEnded: true; segmentsRadial: 64" 
+    material="shader: flat; side: back; src: #video-src; fog: false" 
+    rotation="0 -270 0" visible="false">
+</a-entity>
+
+<a-entity id="screen-180-right" 
+    geometry="primitive: cylinder; radius: 60; height: 100; thetaLength: 180; openEnded: true; segmentsRadial: 64" 
+    material="shader: flat; side: back; src: #video-src; fog: false" 
+    rotation="0 -270 0" visible="false">
+</a-entity>
 
         <a-videosphere id="screen-360" src="#video-src" radius="60" rotation="0 -90 0" material="shader: flat; side: back; fog: false" visible="false"></a-videosphere>
         <a-videosphere id="screen-360-left" src="#video-src" radius="60" rotation="0 -90 0" material="shader: flat; side: back; fog: false" visible="false"></a-videosphere>
@@ -940,3 +954,4 @@
     </script>
 </body>
 </html>
+
