--- a/Helen.Cinema.html
+++ b/Helen.Cinema.html
@@ -102,7 +102,7 @@
             <a-text value="OPEN MENU" align="center" position="0 0.25 0" width="3" color="#ff9d00"></a-text>
         </a-sphere>
 
-        <<a-entity id="hub-wrapper" position="0 0.8 -1.8" rotation="-25 0 0" visible="true">
+<a-entity id="hub-wrapper" position="0 0.8 -1.8" rotation="-25 0 0" visible="true">
     
     <a-box depth="0.01" height="1.0" width="2.8" color="#ffffff" opacity="0.15" class="clickable"></a-box>
     
@@ -505,4 +505,5 @@
     </script>
 </body>
 </html>
+
 
