--- a/The-Hub.html
+++ b/The-Hub.html
@@ -110,22 +110,21 @@
             <a-plane id="btn-depth" position="0.3 -0.05 0.03" width="0.45" height="0.15" color="#ffffff" opacity="0.15" class="clickable btn-hover"><a-text id="txt-depth" value="DEPTH OFF" align="center" width="1.8" color="#ff9d00"></a-text></a-plane>
             <a-plane id="btn-void" position="0.9 -0.05 0.03" width="0.45" height="0.15" color="#ffffff" opacity="0.1" class="clickable btn-hover"><a-text value="VOID" align="center" width="1.8" color="#aaa"></a-text></a-plane>
 
-            <a-plane id="btn-drone" position="-1.0 -0.22 0.03" width="0.35" height="0.12" color="#ffffff" opacity="0.15" class="clickable btn-hover"><a-text id="txt-drone" value="DRONE" align="center" width="1.8" color="white"></a-text></a-plane>
+           <a-plane id="btn-drone" position="-1.0 -0.22 0.03" width="0.35" height="0.12" color="#ffffff" opacity="0.15" class="clickable btn-hover"><a-text id="txt-drone" value="DRONE" align="center" width="1.8" color="white"></a-text></a-plane>
             <a-plane id="btn-pc" position="-0.5 -0.22 0.03" width="0.35" height="0.12" color="#ffffff" opacity="0.15" class="clickable btn-hover"><a-text id="txt-pc" value="PC LINK" align="center" width="1.8" color="white"></a-text></a-plane>
             <a-plane id="btn-local" position="0.0 -0.22 0.03" width="0.35" height="0.12" color="#ffffff" opacity="0.15" class="clickable btn-hover"><a-text id="txt-local" value="LOCAL AR" align="center" width="1.8" color="white"></a-text></a-plane>
-            <a-plane id="btn-rot-left" position="0.5 -0.22 0.03" width="0.2" height="0.12" color="#ffffff" opacity="0.15" class="clickable btn-hover"><a-text value="<" align="center" width="3" color="white"></a-text></a-plane>
-            <a-plane id="btn-reset" position="0.75 -0.22 0.03" width="0.2" height="0.12" color="#ffffff" opacity="0.15" class="clickable btn-hover"><a-text value="RST" align="center" width="2" color="white"></a-text></a-plane>
-            <a-plane id="btn-rot-right" position="1.0 -0.22 0.03" width="0.2" height="0.12" color="#ffffff" opacity="0.15" class="clickable btn-hover"><a-text value=">" align="center" width="3" color="white"></a-text></a-plane>
+            <a-plane id="btn-rot-left" position="0.5 -0.22 0.03" width="0.2" height="0.12" color="#ffffff" opacity="0.15" class="clickable btn-hover"><a-text value="<" align="center" width="1.5" scale="1.5 1.5 1" color="white"></a-text></a-plane>
+            <a-plane id="btn-reset" position="0.75 -0.22 0.03" width="0.2" height="0.12" color="#ffffff" opacity="0.15" class="clickable btn-hover"><a-text value="RST" align="center" width="1.5" color="white"></a-text></a-plane>
+            <a-plane id="btn-rot-right" position="1.0 -0.22 0.03" width="0.2" height="0.12" color="#ffffff" opacity="0.15" class="clickable btn-hover"><a-text value=">" align="center" width="1.5" scale="1.5 1.5 1" color="white"></a-text></a-plane>
 
             <a-text value="SEAT:" position="-1.1 -0.38 0.03" align="center" color="#666" width="1.5"></a-text>
-            <a-plane id="seat-front" position="-0.85 -0.38 0.03" width="0.2" height="0.1" color="#ffffff" opacity="0.15" class="clickable btn-hover"><a-text value="FRNT" align="center" color="#fff" width="2.5"></a-text></a-plane>
-            <a-plane id="seat-back" position="-0.6 -0.38 0.03" width="0.2" height="0.1" color="#ffffff" opacity="0.15" class="clickable btn-hover"><a-text value="BACK" align="center" color="#fff" width="2.5"></a-text></a-plane>
-            <a-plane id="seat-lay" position="-0.35 -0.38 0.03" width="0.2" height="0.1" color="#ffffff" opacity="0.15" class="clickable btn-hover"><a-text value="BED" align="center" color="#fff" width="2.5"></a-text></a-plane>
+            <a-plane id="seat-front" position="-0.85 -0.38 0.03" width="0.2" height="0.1" color="#ffffff" opacity="0.15" class="clickable btn-hover"><a-text value="FRNT" align="center" width="1.5" scale="0.9 0.9 1" color="#fff"></a-text></a-plane>
+            <a-plane id="seat-back" position="-0.6 -0.38 0.03" width="0.2" height="0.1" color="#ffffff" opacity="0.15" class="clickable btn-hover"><a-text value="BACK" align="center" width="1.5" scale="0.9 0.9 1" color="#fff"></a-text></a-plane>
+            <a-plane id="seat-lay" position="-0.35 -0.38 0.03" width="0.2" height="0.1" color="#ffffff" opacity="0.15" class="clickable btn-hover"><a-text value="BED" align="center" width="1.5" scale="0.9 0.9 1" color="#fff"></a-text></a-plane>
             
             <a-text value="CURVE:" position="0.3 -0.38 0.03" align="center" color="#666" width="1.5"></a-text>
-            <a-plane id="curve-less" position="0.6 -0.38 0.03" width="0.2" height="0.1" color="#ffffff" opacity="0.15" class="clickable btn-hover"><a-text value="-" align="center" color="#fff" width="4"></a-text></a-plane>
-            <a-plane id="curve-more" position="0.85 -0.38 0.03" width="0.2" height="0.1" color="#ffffff" opacity="0.15" class="clickable btn-hover"><a-text value="+" align="center" color="#fff" width="4"></a-text></a-plane>
-        </a-entity>
+            <a-plane id="curve-less" position="0.6 -0.38 0.03" width="0.2" height="0.1" color="#ffffff" opacity="0.15" class="clickable btn-hover"><a-text value="-" align="center" width="1.5" scale="1.5 1.5 1" color="#fff"></a-text></a-plane>
+            <a-plane id="curve-more" position="0.85 -0.38 0.03" width="0.2" height="0.1" color="#ffffff" opacity="0.15" class="clickable btn-hover"><a-text value="+" align="center" width="1.5" scale="1.5 1.5 1" color="#fff"></a-text></a-plane>
 
         <a-entity id="rig" position="0 1.6 0">
             <a-camera look-controls="reverseMouseDrag: true" wasd-controls="enabled: false">
