--- a/The-Hub.html
+++ b/The-Hub.html
@@ -125,7 +125,8 @@
             <a-text value="CURVE:" position="0.3 -0.38 0.03" align="center" color="#666" width="1.5"></a-text>
             <a-plane id="curve-less" position="0.6 -0.38 0.03" width="0.2" height="0.1" color="#ffffff" opacity="0.15" class="clickable btn-hover"><a-text value="-" align="center" width="1.5" scale="1.5 1.5 1" color="#fff"></a-text></a-plane>
             <a-plane id="curve-more" position="0.85 -0.38 0.03" width="0.2" height="0.1" color="#ffffff" opacity="0.15" class="clickable btn-hover"><a-text value="+" align="center" width="1.5" scale="1.5 1.5 1" color="#fff"></a-text></a-plane>
-
+ </a-entity>
+            
         <a-entity id="rig" position="0 1.6 0">
             <a-camera look-controls="reverseMouseDrag: true" wasd-controls="enabled: false">
                 <a-cursor id="cursor" color="#00d2ff" fuse="true" fuse-timeout="1000" raycaster="objects: .clickable"
