--- a/The-Hub.html
+++ b/The-Hub.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Hub v36.7: Smart Automation</title>
+    <title>The Hub v36.8: Image Navigation Patch</title>
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.4.120/pdf.min.js"></script>
     <script src="https://unpkg.com/peerjs@1.5.2/dist/peerjs.min.js"></script>
@@ -38,9 +38,9 @@
     <video id="local-cam-video" autoplay playsinline muted></video>
 
     <div id="ui-layer">
-        <h1>The <span style="color: #ff9d00">Hub</span> <span style="font-size: 0.5em; vertical-align: super; color: #666">v36.7</span></h1>
+        <h1>The <span style="color: #ff9d00">Hub</span> <span style="font-size: 0.5em; vertical-align: super; color: #666">v36.8</span></h1>
         <div class="hub-card">
-            <h3 style="margin: 0 0 10px; font-weight: 400;">Smart Automation</h3>
+            <h3 style="margin: 0 0 10px; font-weight: 400;">Image Navigation Patch</h3>
             <p style="color: #888; font-size: 0.9rem;">Select media (Video, Image, PDF, HLS Streams)</p>
             <input type="file" id="file-input" accept="video/*, image/*, .pdf" multiple style="display:none">
             <button class="btn-main" onclick="document.getElementById('file-input').click()">LOAD FILES</button>
@@ -100,12 +100,13 @@
             <a-plane position="0 0.28 0.02" width="2.4" height="0.005" color="#ffffff" opacity="0.3" class="clickable btn-hover" id="bar-bg"></a-plane>
             <a-plane id="progress-fill" position="-1.2 0.28 0.03" width="2.4" height="0.01" color="#00d2ff" scale="0.001 1 1" pivot="center left"></a-plane>
             
+            <a-plane id="btn-prev" position="-0.9 0.15 0.03" width="0.25" height="0.15" color="#ffffff" opacity="0.15" class="clickable btn-hover"><a-text value="|<" align="center" width="3" color="white"></a-text></a-plane>
+            <a-plane id="btn-next" position="0.9 0.15 0.03" width="0.25" height="0.15" color="#ffffff" opacity="0.15" class="clickable btn-hover"><a-text value=">|" align="center" width="3" color="white"></a-text></a-plane>
+            
             <a-entity id="video-controls">
-                <a-plane id="btn-prev" position="-0.9 0.15 0.03" width="0.25" height="0.15" color="#ffffff" opacity="0.15" class="clickable btn-hover"><a-text value="|<" align="center" width="3" color="white"></a-text></a-plane>
                 <a-plane id="btn-seek-back" position="-0.55 0.15 0.03" width="0.25" height="0.15" color="#ffffff" opacity="0.15" class="clickable btn-hover"><a-text id="txt-seek-back" value="-15s" align="center" width="2" color="white"></a-text></a-plane>
                 <a-plane id="btn-play" position="0 0.15 0.03" width="0.7" height="0.2" color="#ffffff" opacity="0.9" class="clickable btn-hover"><a-text id="txt-play" value="PLAY" align="center" width="4" color="#000" font-weight="bold"></a-text></a-plane>
                 <a-plane id="btn-seek-fwd" position="0.55 0.15 0.03" width="0.25" height="0.15" color="#ffffff" opacity="0.15" class="clickable btn-hover"><a-text id="txt-seek-fwd" value="+15s" align="center" width="2" color="white"></a-text></a-plane>
-                <a-plane id="btn-next" position="0.9 0.15 0.03" width="0.25" height="0.15" color="#ffffff" opacity="0.15" class="clickable btn-hover"><a-text value=">|" align="center" width="3" color="white"></a-text></a-plane>
                 <a-plane id="btn-speed" position="1.25 0.15 0.03" width="0.25" height="0.15" color="#ffffff" opacity="0.15" class="clickable btn-hover"><a-text id="txt-speed" value="1x" align="center" width="2" color="white"></a-text></a-plane>
             </a-entity>
 
@@ -151,7 +152,7 @@
             playlist: [], currentTrack: 0, viewMode: 0, is3D: false, isDepthMode: false, isVoid: false, curve: 90, currentObjectURL: null,
             pdf: { doc: null, pageNum: 1, rendering: false, pending: null },
             audio: { ctx: null, source: null, panner: null },
-            ext: { active: false, type: null, conn: null }, // Unified External Feed (PC or Drone)
+            ext: { active: false, type: null, conn: null }, // Unified External Feed
             localCam: { active: false, stream: null } 
         };
 
@@ -245,7 +246,6 @@
             DOM.vr.arHud.setAttribute('visible', true);
         }
 
-        // THE SMART BUTTON CLICK
         DOM.vr.controls.btnExt.addEventListener('click', function() {
             if (state.ext.active) { 
                 stopAllFeeds(); 
@@ -256,7 +256,6 @@
             flash(this);
         });
 
-        // LOCAL AR CAM
         DOM.vr.controls.btnLocal.addEventListener('click', async function() {
             if (!state.localCam.active) {
                 stopAllFeeds('local');
